name: Bytecodes
version: 0.0.1
cabal-version: >= 1.18
author: Jared G. Roesch
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules:
    Bytecodes
  build-depends:
    base >= 4 && <= 5,
    text >= 0.11 && <= 0.12,
    mtl >= 2.1,
    transformers >= 0.3.0.0
